[project]
name = "comfyui_mittimi_load_text"
description = "This node can easily switch between text or prompts by saving presets."
version = "1.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/mittimi/ComfyUI_mittimiLoadText"

[tool.comfy]
PublisherId = "mittimi"
DisplayName = "ComfyUI_mittimiLoadText"
Icon = ""
